issue#95 fixed jumping in desktop-view

--- a/@hubblecommerce/hubble/core/assets/scss/hubble/components/product-detail-buybox.scss
+++ b/@hubblecommerce/hubble/core/assets/scss/hubble/components/product-detail-buybox.scss
@@ -99,7 +99,7 @@
 
         .add-to-cart {
             width: calc(100% - 90px - 10px);
-            min-height: 45px;
+            height: 45px;
 
             &:disabled{
                 opacity: 1;
